<?xml version="1.0"?>
<package format="3">
  <name>carma_wm</name>
  <version>3.3.0</version>
  <description>The carma_wm package</description>
  <maintainer email="carma@dot.gov">carma</maintainer>
  <license>Apache License 2.0</license>
  <author>Michael McConnell</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>autoware_lanelet2_msgs</depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_maps</depend>
  <depend>lanelet2_routing</depend>
  <depend>lanelet2_traffic_rules</depend>
  <depend>lanelet2_extension</depend>
  <depend>carma_utils</depend>
  <depend>cav_msgs</depend>
  <depend>carma_debug_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>autoware_lanelet2_ros_interface</depend>
  <build_depend>carma_cmake_common</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
