<?xml version="1.0"?>
<package format="3">
  <name>carma_wm_ctrl</name>
  <version>4.0.0</version>
  <description>The carma_wm_ctrl package</description>
  <maintainer email="carma@dot.gov">carma</maintainer>
  <license>Apache License 2.0</license>
  <author>Michael McConnell</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>carma_cmake_common</build_depend>
  <build_depend>ament_auto_cmake</build_depend>

  <depend>rclcpp</depend>
  <depend>carma_ros2_utils</depend>
  <depend>rclcpp_components</depend>
  <depend>autoware_lanelet2_msgs</depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_maps</depend>
  <depend>lanelet2_routing</depend>
  <depend>lanelet2_traffic_rules</depend>
  <depend>lanelet2_extension</depend>
  <depend>carma_wm</depend>
  <depend>carma_perception_msgs</depend>
  <depend>carma_planning_msgs</depend>
  <depend>carma_v2x_msgs</depend>
  <depend>j2735_v2x_msgs</depend>
  <depend>carma_debug_ros2_msgs</depend>
  <depend>autoware_lanelet2_ros_interface</depend>
  <depend>std_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
