<?xml version="1.0"?>
<package>
  <name>cav_driver_utils</name>
  <version>1.0.3</version>
  <description>Common CAV Platform driver utilities</description>
  <maintainer email="support@torcrobotics.com">Torc Robotics</maintainer>
  <license>BSD</license>
  <author email="watters@torcrobotics.com">Thomas Watters</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bondcpp</build_depend>
  <build_depend>cav_msgs</build_depend>
  <build_depend>cav_srvs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>bondcpp</run_depend>
  <run_depend>cav_msgs</run_depend>
  <run_depend>cav_srvs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
  </export>
</package>
